# cursor-monorepo

./: .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  diesel.toml
backend/migrations/00000000000000_diesel_initial_setup/: up.sql
backend/migrations/2024_01_01_000001_create_users/: down.sql  up.sql
backend/migrations/2024_01_01_000002_seed_data/: down.sql  up.sql
backend/src/: config.rs  database.rs  lib.rs  main.rs  models.rs  schema.rs
backend/src/handlers/: auth.rs  health.rs  users.rs
backend/src/middleware/: auth.rs
backend/src/services/: auth_service.rs  mod.rs  user_service.rs
backend/tests/: integration_test.rs  simple_test.rs
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/components/: Header.tsx  UserCard.tsx  UserModal.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Login.tsx  Register.tsx  UsersList.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
